--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,21 @@
+*{padding:0;margin:0;border:0;}
+*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
+:focus,:active{outline:none;}
+a:focus,a:active{outline:none;}
+nav,footer,header,aside{display:block;}
+html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display:none;}
+button{cursor:pointer;}
+button::-moz-focus-inner{padding:0;border:0;}
+a,a:visited{text-decoration:none;}
+a:hover{text-decoration:none;}
+ul li{list-style:none;}
+img{vertical-align:top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
+/*--------------------*/
+/* надо разобраться с обнулением */
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -8,18 +26,142 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
+.block__padding-top-100 {
+  padding-top: 100px;
+}
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
+}
+
+.header__position-left {
+  left: 64px;
+}
+
+.header__logo {
+  position: absolute;
+  top: 30px;
+  z-index: 2;
+}
+
+.header__title {
+  margin: auto 0;
+  padding-left: 64px;
+  font-size: 102px;
+  font-weight: 700;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  width: 388px;
+}
+
+.header__link {
+  text-decoration:none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  margin-left: auto;
+  margin-top: 64px;
+}
+
+.two-columns__description {
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+}
+.two-columns__brief{
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraph:nth-child(-n+2) {
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent {
+  font-weight: 700;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+}
+.section-position_center {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-title {
+  padding-bottom: 20px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.section-subtitle {
+  padding-bottom: 60px;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  padding-bottom: 40px;
+}
+
+.table__heading {
+  padding-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.table__text {
+  padding-bottom: 20px;
+  line-height: 1.12;
+  font-size: 18px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
