--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ a,a:visited{text-decoration:none;}
 a:hover{text-decoration:none;}
 ul li{list-style:none;}
 img{vertical-align:top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
+p,div,h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 /*--------------------*/
 /* надо разобраться с обнулением */
 
@@ -42,6 +42,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   max-height: 756px;
   /* выше установили ограничения для секции */
   display: flex;
+  position: relative;
 }
 
 .header__position-left {
@@ -173,9 +174,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 .feynman {
   padding-top: 40px;
   display: flex;
-  min-height: 1050px;
+  position: relative;
+  min-height: 800px;
   background-image: url('../images/feynman.png');
-  background-position: left;
+  background-position: bottom left;
   background-repeat: no-repeat;
 }
 
@@ -184,6 +186,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   font-size: 120px;
   font-weight: 700;
   max-width: 648px;
+  padding-bottom: 70px;
 }
 
 .feynman__subtitle {
@@ -193,7 +196,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 
 .feynman__link {
   position: absolute;
+  top: 50%;
+  bottom:-50%;
   right: 48px;
+  color: #000;
   line-height: 51px;
   font-size: 36px;
 }
@@ -202,6 +208,20 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   padding-top: 70px;
   background-color: #1f1f1f;
   color: white;
+  overflow: hidden;
+  position: relative;
+
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top:0;
+  right: -210px;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  padding-bottom: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -210,4 +230,58 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  padding-bottom: 0px;
+  z-index: 1;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  color: white;
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  min-width: 350px;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
+.footer__columns-copyright {
+  flex-basis: 711px;
+  display: flex;
+
+}
+
+.footer__author {
+  padding-top: 18px;
+  padding-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+  margin-top: 50px;
+}
+
+.footer__columns-social {
+ align-items: center;
+}
+
+.footer__column-heading {
+  padding-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.footer__column-links {
+  flex-direction: column;
+  line-height: 30px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.footer__social-icon {
+  padding-right: 10px;
 }
