--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
-*{padding:0;margin:0;border:0;}
-a,a:visited{text-decoration:none;}
-a:hover{text-decoration:none;}
+* {
+  padding:0;
+  margin:0;
+  border:0;
+}
+a {text-decoration:none;}
 ul li{list-style:none;}
 img{vertical-align:top;}
 p,div,h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
@@ -16,10 +19,8 @@ p,div,h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
   background-color: #f2f2f2;
-  padding:0;
-  margin:0;
-  border:0;
 }
+
 .block__padding-top-100 {
   padding-top: 100px;
 }
