--- a/styles/style.css
+++ b/styles/style.css
@@ -4,20 +4,6 @@
   border:0;
 }
 
-a {
-  text-decoration:none;
-}
-
-ul, li {
-  list-style:none;
-}
-img {
-  vertical-align:top;
-}
-p,div,h1,h2,h3,h4,h5,h6 {
-  font-size:inherit;
-  font-weight:inherit;
-}
 /*--------------------*/
 
 .page {
@@ -61,6 +47,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
 }
 
 .header__title {
+  width: 730px;
   margin: auto 0;
   padding-left: 64px;
   font-size: 102px;
@@ -81,6 +68,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
 
 .header__link {
   text-decoration:none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -94,22 +82,32 @@ p,div,h1,h2,h3,h4,h5,h6 {
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  right: 0;
+  top: 64px;
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  margin-left: auto;
-  margin-top: 64px;
+}
+
+.description {
+  background-color: white;
+  width: 100%;
 }
 
 .two-columns__description {
   display: flex;
+  justify-content: space-between;
   width: 80%;
   margin: 0 auto;
 }
+
 .two-columns__brief{
   line-height: 1.2;
   font-size: 18px;
   color: #2f80ed;
+  font-weight:inherit;
+  width: 175px;
 }
 
 .two-columns__main-text {
@@ -120,10 +118,11 @@ p,div,h1,h2,h3,h4,h5,h6 {
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
+  margin-bottom: 30px;
 }
 
-.two-columns__paragraph:nth-child(-n+2) {
-  margin-bottom: 30px;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -133,6 +132,8 @@ p,div,h1,h2,h3,h4,h5,h6 {
 .digits {
   display: flex;
   flex-direction: column;
+  background-color: white;
+  padding-bottom: 60px;
 }
 
 .section-title {
@@ -175,7 +176,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
 }
 
 .feynman {
-  padding-top: 40px;
+  padding-top: 100px;
   display: flex;
   position: relative;
   min-height: 800px;
@@ -200,11 +201,11 @@ p,div,h1,h2,h3,h4,h5,h6 {
 .feynman__link {
   position: absolute;
   top: 50%;
-  bottom:-50%;
   right: 48px;
   color: #000;
   line-height: 51px;
   font-size: 36px;
+  text-decoration:none;
 }
 
 .kaufman {
@@ -214,6 +215,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
   color: white;
   overflow: hidden;
   position: relative;
+  margin: 0;
 }
 
 .kaufman__triangle {
@@ -222,6 +224,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
   right: -210px;
   z-index: 1;
   background-image: url('../images/kaufman-triangle.svg');
+  background-size: 877px 877px;
 }
 
 .section-position_z-index {
@@ -294,6 +297,7 @@ p,div,h1,h2,h3,h4,h5,h6 {
   line-height: 30px;
   font-size: 18px;
   color: #fff;
+  text-decoration:none;
 }
 
 .footer__social-icon {
