--- a/styles/style.css
+++ b/styles/style.css
@@ -18,12 +18,8 @@
   background-color: #f2f2f2;
 }
 
-.block__padding-top-100 {
-  padding-top: 100px;
-}
-
 .section-position_center {
-  margin:0 auto;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -36,14 +32,11 @@
   position: relative;
 }
 
-.header__position-left {
-  left: 64px;
-}
-
-.header__logo {
+.logo__place_header {
   position: absolute;
   top: 30px;
   z-index: 2;
+  left: 64px;
 }
 
 .header__title {
@@ -64,6 +57,7 @@
   line-height: 25px;
   width: 388px;
   z-index: 2;
+  left: 64px;
 }
 
 .header__link {
@@ -93,6 +87,7 @@
 .description {
   background-color: white;
   width: 100%;
+  padding-top: 100px;
 }
 
 .two-columns__description {
@@ -134,6 +129,7 @@
   flex-direction: column;
   background-color: white;
   padding-bottom: 60px;
+  padding-top: 100px;
 }
 
 .section-title {
@@ -141,12 +137,16 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 700;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .section-subtitle {
   padding-bottom: 60px;
   line-height: 34px;
   font-size: 24px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .table {
@@ -178,6 +178,7 @@
 .feynman {
   padding-top: 100px;
   display: flex;
+  flex-direction: column;
   position: relative;
   min-height: 800px;
   background-image: url('../images/feynman.png');
@@ -223,8 +224,11 @@
   top:0;
   right: -210px;
   z-index: 1;
-  background-image: url('../images/kaufman-triangle.svg');
-  background-size: 877px 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: cover;
+  width: 877px;
+  height: 877px;
+  background-repeat: no-repeat;
 }
 
 .section-position_z-index {
@@ -281,7 +285,7 @@
   margin-top: 50px;
 }
 
-.footer__columns-social {
+.footer__column_content-social {
  align-items: center;
 }
 
@@ -297,7 +301,12 @@
   line-height: 30px;
   font-size: 18px;
   color: #fff;
+  list-style-type:none;
+}
+
+.footer__column-link {
   text-decoration:none;
+  color: #fff;
 }
 
 .footer__social-icon {
