--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,5 @@
 * {
-  padding:0;
   margin:0;
-  border:0;
 }
 
 /*--------------------*/
@@ -58,6 +56,7 @@
   width: 388px;
   z-index: 2;
   left: 64px;
+  margin: 0;
 }
 
 .header__link {
@@ -88,6 +87,7 @@
   background-color: white;
   width: 100%;
   padding-top: 100px;
+  margin: 0;
 }
 
 .two-columns__description {
@@ -103,6 +103,7 @@
   color: #2f80ed;
   font-weight:inherit;
   width: 175px;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -114,10 +115,12 @@
   line-height: 34px;
   font-size: 24px;
   margin-bottom: 30px;
+  margin-top: 0;
 }
 
 .two-columns__paragraph:last-child {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .two-columns__span-accent {
@@ -167,12 +170,14 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 700;
+  margin: 0;
 }
 
 .table__text {
   padding-bottom: 20px;
   line-height: 1.12;
   font-size: 18px;
+  margin: 0;
 }
 
 .feynman {
@@ -258,23 +263,32 @@
 .footer {
   background-color: #1f1f1f;
   color: white;
-  position: relative;
+  display: flex;
   padding-top: 60px;
   padding-bottom: 40px;
-  min-width: 350px;
+  min-height: 350px;
 }
 
 .footer__columns {
   display: flex;
   justify-content: space-between;
   width: 90%;
-  margin: auto;
+  margin: 0 auto;
 }
 
-.footer__columns-copyright {
+.footer__content_column-copyright {
   flex-basis: 711px;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: relative;
+  min-height: 250px;
+}
 
+.logo__place_footer {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .footer__author {
@@ -282,7 +296,6 @@
   padding-bottom: 18px;
   line-height: 25px;
   font-size: 18px;
-  margin-top: 50px;
 }
 
 .footer__column_content-social {
@@ -294,6 +307,7 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: 700;
+  margin: 0;
 }
 
 .footer__column-links {
@@ -302,11 +316,14 @@
   font-size: 18px;
   color: #fff;
   list-style-type:none;
+  margin: 0;
+  padding: 0;
 }
 
 .footer__column-link {
   text-decoration:none;
   color: #fff;
+  margin: 0;
 }
 
 .footer__social-icon {
