--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-* {
-  margin:0;
-}
-
-/*--------------------*/
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -16,11 +10,6 @@
   background-color: #f2f2f2;
 }
 
-.section-position_center {
-  margin: 0 auto;
-  text-align: center;
-}
-
 .header {
   height: 100vh;
   min-height: 600px;
@@ -30,11 +19,11 @@
   position: relative;
 }
 
-.logo__place_header {
-  position: absolute;
+.logo_place_header {
   top: 30px;
   z-index: 2;
   left: 64px;
+  position: absolute;
 }
 
 .header__title {
@@ -90,7 +79,7 @@
   margin: 0;
 }
 
-.two-columns__description {
+.two-columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
@@ -175,9 +164,13 @@
 
 .table__text {
   padding-bottom: 20px;
-  line-height: 1.12;
+  line-height: 1.2;
   font-size: 18px;
   margin: 0;
+}
+
+.table__text:last-child {
+  padding-bottom: 0;
 }
 
 .feynman {
@@ -197,11 +190,15 @@
   font-weight: 700;
   max-width: 648px;
   padding-bottom: 70px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .feynman__link {
@@ -236,18 +233,15 @@
   background-repeat: no-repeat;
 }
 
-.section-position_z-index {
-  z-index: 2;
-  position: relative;
-}
-
 .section-title_theme_dark {
   z-index: 2;
+  position: relative;
 }
 
 .section-subtitle_theme_dark {
   z-index: 2;
   padding-bottom: 0;
+  position: relative;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -267,6 +261,7 @@
   padding-top: 60px;
   padding-bottom: 40px;
   min-height: 350px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
@@ -280,15 +275,14 @@
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   position: relative;
   min-height: 250px;
 }
 
-.logo__place_footer {
-  position: absolute;
-  top: 0;
-  left: 0;
+.logo_place_footer {
+  height: 35px;
+  width: 183px;
 }
 
 .footer__author {
