--- a/blocks/content/feynman/feynman.css
+++ b/blocks/content/feynman/feynman.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   position: relative;
   min-height: 800px;
-  background-image: url('../images/feynman.png');
+  background-image: url('../../../images/feynman.png');
   background-position: bottom left;
   background-repeat: no-repeat;
 }
