--- a/blocks/content/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/content/kaufman/__triangle/kaufman__triangle.css
@@ -3,9 +3,10 @@
   top:0;
   right: -210px;
   z-index: 1;
-  background-image: url("../images/kaufman-triangle.svg");
+  background-image: url("../../../../images/kaufman-triangle.svg");
   background-size: cover;
   width: 877px;
   height: 877px;
   background-repeat: no-repeat;
+  animation: rotation 20s linear infinite;
 }
