--- a/blocks/card/__item/card__item.css
+++ b/blocks/card/__item/card__item.css
@@ -1,3 +1,10 @@
 .card__item {
+  margin-right: 100px;
+  padding-top: 60px;
+  width: 240px;
+  text-align: center;
+}
 
+.card__item:nth-child(3) {
+  margin-right: 0;
 }
