--- a/blocks/index.css
+++ b/blocks/index.css
@@ -12,18 +12,35 @@
 @import url(../blocks/card/__title/card__title.css);
 
 @import url(../blocks/content/description/description.css);
+
 @import url(../blocks/content/digits/digits.css);
+
 @import url(../blocks/content/video/video.css);
 @import url(../blocks/content/video/__iframe/video__iframe.css);
 @import url(../blocks/content/video/__iframes/video__iframes.css);
+
 @import url(../blocks/content/oakley/oakley.css);
+
 @import url(../blocks/content/feynman/feynman.css);
 @import url(../blocks/content/feynman/__link/feynman__link.css);
 @import url(../blocks/content/feynman/__subtitle/feynman__subtitle.css);
 @import url(../blocks/content/feynman/__title/feynman__title.css);
+
 @import url(../blocks/content/kaufman/kaufman.css);
 @import url(../blocks/content/kaufman/__triangle/kaufman__triangle.css);
+
 @import url(../blocks/content/techniques/techniques.css);
+
+@import url(../blocks/content/khan/khan.css);
+@import url(../blocks/content/khan/__title/khan__title.css);
+@import url(../blocks/content/khan/__quote/khan__quote.css);
+@import url(../blocks/content/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/content/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/content/khan/__container/khan__container.css);
+@import url(../blocks/content/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/content/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/content/khan/__book-container/khan__book-container.css);
+@import url(../blocks/content/khan/__author/khan__author.css);
 
 @import url(../blocks/logo/_place/logo_place_footer.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
