--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
@@ -5,46 +6,46 @@
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
 
-@import url(../blocks/card/card.css);
-@import url(../blocks/card/__description/card__description.css);
-@import url(../blocks/card/__image/card__image.css);
-@import url(../blocks/card/__item/card__item.css);
-@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
 
-@import url(../blocks/content/description/description.css);
+@import url(../blocks/description/description.css);
 
-@import url(../blocks/content/digits/digits.css);
+@import url(../blocks/digits/digits.css);
 
-@import url(../blocks/content/video/video.css);
-@import url(../blocks/content/video/__iframe/video__iframe.css);
-@import url(../blocks/content/video/__iframes/video__iframes.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
 
-@import url(../blocks/content/oakley/oakley.css);
+@import url(../blocks/oakley/oakley.css);
 
-@import url(../blocks/content/feynman/feynman.css);
-@import url(../blocks/content/feynman/__link/feynman__link.css);
-@import url(../blocks/content/feynman/__subtitle/feynman__subtitle.css);
-@import url(../blocks/content/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
 
-@import url(../blocks/content/kaufman/kaufman.css);
-@import url(../blocks/content/kaufman/__triangle/kaufman__triangle.css);
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
-@import url(../blocks/content/techniques/techniques.css);
+@import url(../blocks/techniques/techniques.css);
 
-@import url(../blocks/content/khan/khan.css);
-@import url(../blocks/content/khan/__title/khan__title.css);
-@import url(../blocks/content/khan/__quote/khan__quote.css);
-@import url(../blocks/content/khan/__quote-author/khan__quote-author.css);
-@import url(../blocks/content/khan/__quote-author-subline/khan__quote-author-subline.css);
-@import url(../blocks/content/khan/__container/khan__container.css);
-@import url(../blocks/content/khan/__buy-link/khan__buy-link.css);
-@import url(../blocks/content/khan/__book-pic/khan__book-pic.css);
-@import url(../blocks/content/khan/__book-container/khan__book-container.css);
-@import url(../blocks/content/khan/__author/khan__author.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__author/khan__author.css);
 
-@import url(../blocks/content/resources/resources.css);
-@import url(../blocks/content/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/content/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
 @import url(../blocks/logo/_place/logo_place_footer.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
@@ -55,10 +56,11 @@
 
 @import url(../blocks/rotation/rotation.css);
 
-@import url(../blocks/section/section-title/section-title.css);
-@import url(../blocks/section/section-title/_theme/section-title_theme_dark.css);
-@import url(../blocks/section/section-subtitle/section-subtitle.css);
-@import url(../blocks/section/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/__cell/table__cell.css);
